--- a/Moras.Net/locale/en/LC_MESSAGES/default.po
+++ b/Moras.Net/locale/en/LC_MESSAGES/default.po
@@ -7,16 +7,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: moras\n"
 "POT-Creation-Date: 2005-12-22 17:09\n"
-"PO-Revision-Date: 2007-07-01 15:47+0100\n"
+"PO-Revision-Date: 2017-07-15 23:05+0200\n"
 "Last-Translator: McKenna <mckenna@gmx.de>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: dxgettext 1.2.1\n"
+"X-Generator: Poedit 2.0.2\n"
 "Language-Team: \n"
+"Language: en\n"
+"X-Poedit-KeywordsList: _;Text\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Poedit-SourceCharset: UTF-8\n"
+"X-Poedit-Basepath: ../../../..\n"
+"X-Poedit-Flags-xgettext: --no-wrap\n"
+"X-Poedit-SearchPath-0: .\n"
 
 # ####################################################################
-# FILE: mainframe.cpp
+# FILE: TfrmMain.Designer.cs
 # ####################################################################
 msgid "Moras Ausrüstungsplaner "
 msgstr "Moras Equipment Planer "
@@ -418,6 +425,33 @@ msgstr "' multiple at position '"
 msgid "Prüfe auf neue Version..."
 msgstr "Checking for new version..."
 
+msgid "Im Moment kann keine neue Version heruntergeladen werden."
+msgstr "The new version of the application cannot be downloaded at this time."
+
+msgid "Bitte überprüfen Sie Ihre Netzwerkverbindung oder versuchen Sie es später noch einmal."
+msgstr "Please check your network connection, or try again later."
+
+msgid "Auf eine neue Version kann nicht geprüft werden. Das ClickOnce-Deployment ist beschädigt."
+msgstr "Cannot check for a new version of the application. The ClickOnce deployment is corrupt."
+
+msgid "Bitte führen Sie ein neues Deployment durch und versuchen es noch einmal."
+msgstr "Please redeploy the application and try again."
+
+msgid "Es gibt eine neue Version. Möchten Sie jetzt das Update durchführen?"
+msgstr "An update is available. Would you like to update the application now?"
+
+msgid "Das Update zu Version {0} wurde als erforderlich eingestuft. Das Update wird jetzt installiert und das Programm danach neugestartet."
+msgstr "This application has detected a mandatory update from your current version to version {0}. The application will now install the update and restart."
+
+msgid "Das Update war erfolgreich und das Programm wird jetzt neugestartet."
+msgstr "The application has been upgraded, and will now restart."
+
+msgid "Update erfolgreich"
+msgstr "Success"
+
+msgid "Die aktuellste Version kann nicht installiert werden."
+msgstr "Cannot install the latest version of the application."
+
 msgid "Es gibt eine neue Version, möchtest du auf die Homepage um sie zu installieren?"
 msgstr "New version available, do you want to visit the homepage to install the new version?"
 
@@ -457,9 +491,9 @@ msgstr "Optimize result"
 msgid "Das Optimieren der Datenbank hat folgenden Speicher wieder freigegeben: "
 msgstr "Optimizing your database has freed the following amoung of space: "
 
-######################################################################
-# FILE: armorslotframe.cpp
-######################################################################
+# ####################################################################
+# FILE: TfrmArmorSlot.Designer.cs
+# ####################################################################
 msgid "Bitte die Rüstungsposition angeben..."
 msgstr "Please choose the armor position..."
 
@@ -484,9 +518,9 @@ msgstr "Arms"
 msgid "Körper/Brustpanzer"
 msgstr "Chest"
 
-######################################################################
+# #####################################################################
 # FILE: craftframe.cpp
-######################################################################
+# #####################################################################
 msgid "Juwele"
 msgstr "Jewels"
 
@@ -526,9 +560,9 @@ msgstr " Jewel 3:"
 msgid " Juwel 4:"
 msgstr " Jewel 4:"
 
-######################################################################
+# #####################################################################
 # FILE: database.cpp
-######################################################################
+# #####################################################################
 msgid "Lade Itemdatenbank.. ("
 msgstr "Loading Item-Database.. ("
 
@@ -562,18 +596,18 @@ msgstr "Data"
 msgid "Gesamt"
 msgstr "Total"
 
-######################################################################
+# #####################################################################
 # FILE: createarmor.cpp
-######################################################################
+# #####################################################################
 msgid "Erstelle Rüstung..."
 msgstr "Create Armor..."
 
 msgid "Werte"
 msgstr "Values"
 
-######################################################################
+# #####################################################################
 # FILE: importframe.cpp
-######################################################################
+# #####################################################################
 msgid "Importiere Gegenstände..."
 msgstr "Importing Items..."
 
@@ -640,9 +674,9 @@ msgstr "' contains no Itemdata."
 msgid "Moras Itemdatei (*.xml)|*.xml"
 msgstr "Moras Item file (*.xml)|*.xml"
 
-######################################################################
+# #####################################################################
 # FILE: item.cpp
-######################################################################
+# #####################################################################
 msgid "Einzigartig"
 msgstr "Unique"
 
@@ -670,9 +704,9 @@ msgstr "All Classes ("
 msgid "Fundort/Herkunft:"
 msgstr "Origin:"
 
-######################################################################
+# #####################################################################
 # FILE: jewelslotframe.cpp
-######################################################################
+# #####################################################################
 msgid "Bitte die Art des Schmuckstücks angeben..."
 msgstr "Please choose a Jeweltype..."
 
@@ -697,15 +731,15 @@ msgstr "Ring"
 msgid "Handgelenk/Armreif"
 msgstr "Wrist"
 
-######################################################################
+# #####################################################################
 # FILE: newnameframe.cpp
-######################################################################
+# #####################################################################
 msgid "Einen Namen eingeben..."
 msgstr "Enter a Name..."
 
-######################################################################
+# #####################################################################
 # FILE: optionsframe.cpp
-######################################################################
+# #####################################################################
 msgid "Optionen"
 msgstr "Options"
 
@@ -719,7 +753,7 @@ msgid "Erweiterungen"
 msgstr "Extensions"
 
 msgid "Stufe des Bannzauberers:"
-msgstr "Level of Spellcrafter"
+msgstr "Level of Spellcrafter:"
 
 msgid "Zeige halbe Imbue-Punkte"
 msgstr "Show half Imbue-Points"
@@ -859,9 +893,9 @@ msgstr "Weekly"
 msgid "Monatlich"
 msgstr "Monthly"
 
-######################################################################
+# #####################################################################
 # FILE: overwriteframe.cpp
-######################################################################
+# #####################################################################
 msgid "Gegenstand überschreiben?"
 msgstr "Overwrite Item?"
 
@@ -872,7 +906,7 @@ msgid "Gegenstand in Datenbank"
 msgstr "Item in Database"
 
 msgid "zu speichernder Gegenstand"
-msgstr "Item to be saved"
+msgstr "item to be saved"
 
 msgid "Über&schreiben"
 msgstr "&Overwrite"
@@ -895,9 +929,9 @@ msgstr "Save all as new"
 msgid "Alle ignorieren"
 msgstr "Ignore all"
 
-######################################################################
+# #####################################################################
 # FILE: reportframe.cpp
-######################################################################
+# #####################################################################
 msgid "Langer Bericht"
 msgstr "Long Report"
 
@@ -931,9 +965,9 @@ msgstr "Save report as..."
 msgid "Textdateien (*.txt)|*.txt"
 msgstr "Text files (*.txt)|*.txt"
 
-######################################################################
+# #####################################################################
 # FILE: statusframe.cpp
-######################################################################
+# #####################################################################
 msgid "Status der Datenbank"
 msgstr "Database Status"
 
@@ -946,24 +980,24 @@ msgstr "Size:"
 msgid "Sprache:"
 msgstr "Lang:"
 
-######################################################################
+# #####################################################################
 # FILE: updatemode.cpp
-######################################################################
+# #####################################################################
 msgid "Nur neue und geänderte Items herunterladen"
 msgstr "Download only new and updated Items"
 
 msgid "Alle Items herunterladen"
 msgstr "Download all Items"
 
-######################################################################
+# #####################################################################
 # FILE: weaponslotframe.cpp
-######################################################################
+# #####################################################################
 msgid "Bitte die Waffenart angeben..."
 msgstr "Please choose a weapontype..."
 
-######################################################################
+# #####################################################################
 # FILE: weightsframe.cpp
-######################################################################
+# #####################################################################
 msgid "Wichtungen der Werte"
 msgstr "Weights for the Attributes"
 
@@ -1012,9 +1046,9 @@ msgstr "Set actual page to this value"
 msgid "Alle Seiten auf diesen Wert setzen"
 msgstr "Set all pages to this value"
 
-######################################################################
+# #####################################################################
 # FILE: managedb.cpp
-######################################################################
+# #####################################################################
 msgid "<Alle>"
 msgstr "<Any>"
 
@@ -1072,18 +1106,18 @@ msgstr "Export to which file?"
 msgid "XML-Dateien (*.xml)|*.xml"
 msgstr "XML files (*.xml)|*.xml"
 
-######################################################################
+# #####################################################################
 # FILE: splashscreen.cpp
-######################################################################
+# #####################################################################
 msgid "Fehler beim Laden der Resource für das Splash-Bild!"
 msgstr "Error while loading the splash picture resource!"
 
 msgid "Resourcen Fehler!"
 msgstr "Error in Resource!"
 
-######################################################################
+# #####################################################################
 # FILE: player.cpp
-######################################################################
+# #####################################################################
 msgid "Es ist eine Unstimmigkeit mit der Konfigurationsdatei vorhanden. Bitte informiere uns über diesen Fehler."
 msgstr "The is a difference in your config attributes and file attributes. Please inform us about this error."
 
@@ -1103,9 +1137,9 @@ msgstr "Unknown weight"
 msgid "Konnte die Datei nicht öffnen oder sie ist eine zu alte Version."
 msgstr "Couldn't open the file or it is an old version."
 
-######################################################################
+# #####################################################################
 # FILE: xml_config.cpp
-######################################################################
+# #####################################################################
 msgid "XML-Fehler in Datei 'config.xml'"
 msgstr "XML-Error in file 'config.xml'"
 
@@ -1204,9 +1238,9 @@ msgstr ""
 "Unknown or missing type-attribute at line %d:\n"
 "%s"
 
-######################################################################
+# #####################################################################
 # FILE: context help
-######################################################################
+# #####################################################################
 msgid "Klassen"
 msgstr "Classes"
 
@@ -1231,9 +1265,9 @@ msgstr "Weapontype"
 msgid "Schatztruhen"
 msgstr "Treasury"
 
-######################################################################
-# FILE: componenten
-######################################################################
+# #####################################################################
+# FILE: TMCapView.cs
+# #####################################################################
 msgid "(Stufe)"
 msgstr "(Level)"
 
@@ -1246,10 +1280,9 @@ msgstr "(Race Bonus)"
 msgid "Wert"
 msgstr "Value"
 
-######################################################################
-# FILE: playerweights.cpp
-######################################################################
-
+# ####################################################################
+# FILE: TfrmWeights.Designer.cs
+# ####################################################################
 msgid "Neue Gewichtung"
 msgstr "New weight"
 
@@ -1267,8 +1300,3 @@ msgstr "Error while loading a weights file. The extension should be '.wgt'!"
 
 msgid "Ungültige Dateiendung"
 msgstr "Invalid filename extensionUnknown weight"
-
-######################################################################
-# FILE: playerattributes.cpp
-######################################################################
-
